[package]
name = "mitte_amd64"
version = "0.1.0"
authors = ["bytewise <bytewise@fastmail.com>"]
description = "A dynamic amd64 assembler"
repository = "https://github.com/bytwise/mitte_amd64"
keywords = ["emitter", "assembler", "amd64", "x86_64"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "1.0"

[dev-dependencies]
capstone = "0.0.4"
memmap = "0.5.0"
