[package]
name = "mitte_amd64"
version = "0.4.0"
authors = ["bytewise <bytewise@fastmail.com>"]
description = "A dynamic amd64 assembler"
repository = "https://github.com/bytwise/mitte_amd64"
keywords = ["emitter", "assembler", "amd64", "x86_64"]
license = "MIT/Apache-2.0"

[dependencies]
mitte_core = { git = "https://github.com/bytwise/mitte_core", rev = "09e54d1" }
arrayvec = "0.7"

[dev-dependencies]
capstone = "0.2.0"
memmap = "0.5.0"
